# ipl_pred

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  data_updator.cmd  data_updator.sh  index.html  netlify.toml  package.json  rust-toolchain
client/: global.css  index.html  index.js  package.json  webpack.config.js
client/functions/: all_matches.js
data/: graph_data.json  matches.json  prettify.js  sync.js
functions/: all_matches.js  league_matches.js  list_remain.js  live_match.js
simple_parser/: all_matches.html  index.js  test.js
src/: algo.rs  decl.rs  graph.rs  ipl.rs  ipl_with_wasm.rs  lib.rs  main.rs  util.rs
