[package]
name = "ipl_pred"
version = "0.1.0"
authors = ["Aditya Gupta <ag15035@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
json_minimal = "0.1.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimise for small code size
opt-level = "s"
